# classtwin-simulation

./: .gitignore  CITATION.cff  LICENSE  README.MD  index.html  paper_outline.md  pyproject.toml  requirements.txt  skripsi_draft.md
bimbingan/: persiapan_bimbingan_pertama.md  persiapan_sidang.md  ringkasan_eksekutif.md
data/example_run/: scenario_comparison.csv  scenario_comparison.json
data/example_run/baseline/: class_weekly.csv  config.json  students.csv  summary.json
data/example_run/high_load/: class_weekly.csv  config.json  students.csv  summary.json
data/example_run/intervention/: class_weekly.csv  config.json  students.csv  summary.json
data/example_run/slow_feedback/: class_weekly.csv  config.json  students.csv  summary.json
docs/: index.html
figures/: generate_figures.py
output/: Bab1-3_untuk_dosbing.docx  Bab1_Pendahuluan.docx  Bab2_TinjauanPustaka.docx  Bab3_Metodologi.docx  ClassTwin_Skripsi_Draft.docx
scripts/: gen_convergence_fig.py  generate_example_run.py  run_oat20.py
skripsi/: 00_cover.md  01_kata_pengantar.md  02_daftar_istilah.md  bab1_pendahuluan.md  bab2_tinjauan_pustaka.md  bab3_metodologi.md  bab4_hasil_pembahasan.md  bab5_kesimpulan.md  daftar_pustaka.md  lampiran.md
src/: __init__.py  config.py  insights.py
src/app/: streamlit_app.py
src/experiments/: __init__.py  runner.py  scenarios.py  sensitivity.py
src/model/: __init__.py  agents.py  classroom_model.py  dynamics.py
src/viz/: __init__.py  plots.py
tests/: test_simulation.py
