[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "classtwin-simulation"
version = "0.1.0"
description = "Classroom Ecosystem Digital Twin — Agent-Based Simulation"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "matplotlib>=3.7",
    "streamlit>=1.28",
    "pydantic>=2.0",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
